COMP-135 - fix: fixed horizontal scroll bug
Removed CSS moving the horizontal scroll bar to the left (the apparent source of the jitter), and then moved the add contacts button 10 pixels to the left

--- a/src/App.css
+++ b/src/App.css
@@ -39,8 +39,7 @@ img{
 .horizon {
   width: 100vw;
   height: 20vh;
-  position: relative;
-  left: 50px;
+  
   padding-top: 30px;
 }
 
@@ -244,9 +243,11 @@ a:hover {text-decoration: none; color: inherit}
 
 .contact {
   border-radius: 50%;
-  height: 110px;
-  width: 110px;
+  height: 120px;
+  width: 120px;
   padding: 27px 27px;
+  position: relative;
+  left: 10px;
 }
 
 .fc {
